// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests SearchBar component +++ renderer component 1`] = `
<div
  className="makeStyles-search-1"
>
  <div
    className="makeStyles-searchIcon-2"
  >
    <SearchIcon />
  </div>
  <WithStyles(ForwardRef(InputBase))
    classes={
      Object {
        "input": "makeStyles-inputInput-4",
        "root": "makeStyles-inputRoot-3",
      }
    }
    inputProps={
      Object {
        "aria-label": "search",
      }
    }
    name="search"
    onChange={[Function]}
    placeholder="Поиск…"
    value=""
  />
</div>
`;

exports[`Tests SearchBar component +++ simulate of changing inputs value 1`] = `
<div
  className="makeStyles-search-1"
>
  <div
    className="makeStyles-searchIcon-2"
  >
    <SearchIcon />
  </div>
  <WithStyles(ForwardRef(InputBase))
    classes={
      Object {
        "input": "makeStyles-inputInput-4",
        "root": "makeStyles-inputRoot-3",
      }
    }
    inputProps={
      Object {
        "aria-label": "search",
      }
    }
    name="search"
    onChange={[Function]}
    placeholder="Поиск…"
    value="Новая заявка-21"
  />
</div>
`;
